ecmascript/parser/tests/test262-error-references/fail/2e95646f9143563e.js.stderr
error: Invalid character in identifier
 --> $DIR/tests/test262-parser/fail/2e95646f9143563e.js:1:1
  |
1 | \u0000
  | ^^^^^^

